--- a/src/AUTHORS.txt
+++ b/src/AUTHORS.txt
@@ -3,4 +3,4 @@ AUTHORS
 
 Sphinx template, css, packaging
 -------------------------------
-* nao iwata <naoiwata.info at gmail.com> Sphinx-users.jp
+* nao iwata <orrrizzle{at}gmail.com>
