--- a/src/HISTORY.txt
+++ b/src/HISTORY.txt
@@ -1,6 +1,10 @@
 HISTORY
 =======
 
+0.2.0 (2014.01.14)
+------------------
+* Optimized layout for smartphones and tablets
+
 0.1.0 (2013.09.16)
 ------------------
-* first release
+* First release
