--- a/src/HISTORY.txt
+++ b/src/HISTORY.txt
@@ -1,9 +1,9 @@
 HISTORY
 =======
 
-0.2.0 (2014.01.14)
+0.2.0 (2016.01.09)
 ------------------
-* Optimized layout for smartphones and tablets
+* Improve css
 
 0.1.0 (2013.09.16)
 ------------------
